--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -52,6 +52,11 @@ body{font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; overflow:hidden;}
 .side_left{width:240px; text-align: left; position:absolute; top:63px; left:0px; bottom:0px;}
 .side_right{ margin-left:230px; bottom:0px; top:63px; overflow:auto; position:absolute; left:0px; right:0px;
 }
+.ab_Title{margin-bottom:10px;border-bottom:1px solid #ddd; margin:0; padding-left:28px;  position:absolute; z-index: 10; left:11px; right:0px; top:0px;
+  box-shadow: 1px 1px 1px 0px #f1f1f1;padding-right:28px;
+  background:#fff}
+.ab_Title h4{padding-bottom:6px; margin-top:25px; font-weight: normal;}
+.ab_navRouter{background: none; margin-bottom: 0px; line-height: 32px; font-size: 18px; margin-top: 12px;}
 
 /*覆盖样式*/
 li{margin:0px;}
@@ -60,8 +65,10 @@ li{margin:0px;}
 .navbar-default .navbar-nav>li>a:hover{color:#fff; font-weight: 700;}
 .pagination>li>a, .pagination>li>span{color:rgba(0,0,0,.5);}
 .pagination>.active a{font-weight: bolder; color:#fff;}
-
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{vertical-align: middle; padding:8px 0px;}
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{vertical-align: middle; padding:8px 10px;}
+.ab_item{position:relative;}
+.ab_item .del{position:absolute; color:#000; right:-23px; top:-20px; display:block; width:30px; height:30px; border-radius:15px; background:#fff; z-index:10; border:1px solid rgb(232, 232, 232); text-align: center; line-height:32px;}
+.ab_detail dt,.ab_detail dd{line-height: 35px;}
 
 /*左侧折叠*/
 .ab_cursor span{
@@ -78,10 +85,10 @@ li{margin:0px;}
 }
 
 .ab_navTitle span {
-	-moz-transform:           rotate(90deg);
-  -webkit-transform:        rotate(90deg);
-  -o-transform:             rotate(90deg);
-  transform:                rotate(90deg);
+  -moz-transform:rotate(90deg);
+  -webkit-transform:rotate(90deg);
+  -o-transform:rotate(90deg);
+  transform:rotate(90deg);
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
 }
 
@@ -89,6 +96,6 @@ li{margin:0px;}
 .ab_style{position:absolute; top:0px;  padding-right:30px; left:25px; padding-top:68px; right:0px; bottom:0px; overflow: auto;}
 .ab_screen{
   /*box-shadow:1px 1px 2px 0px #337ab7; */
-  border-bottom:1px solid #337ab7;
+  /*border-bottom:1px solid #337ab7;*/
   padding:10px 0px;
 }
